[package]
name = "cdda_bisector"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1"
json5 = "0.4"
serde = {"version" = "1.0", features=["derive"]}
ureq = "2"
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
chrono ="0.4"
regex = "1.11.1"
